[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Info_Panel/img/пушка.png" type="Texture" id=1]
[ext_resource path="res://GameFile/GUI/Endless Wave Interface/Info_Panel/InfoPanel/InfoPanel.gd" type="Script" id=2]
[ext_resource path="res://Images/Endless Waves/Font/Font.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.235294, 0.231373, 0.266667, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.580392, 0.470588, 0.470588, 1 )

[sub_resource type="Theme" id=3]
Panel/styles/panel = SubResource( 5 )

[sub_resource type="Theme" id=4]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 1, 1, 1, 1 )
thickness = 5

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
grow_end = 2.0

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "Flashing1"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_Gold/ColorRect5:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_Gold/ColorRect5:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.862745, 0.47451, 0.47451 ), Color( 0.27451, 0.862745, 0.47451, 0 ), Color( 0.27451, 0.862745, 0.47451, 0.47451 ), Color( 0.27451, 0.862745, 0.47451, 0 ), Color( 0.27451, 0.862745, 0.47451, 0.47451 ), Color( 0.27451, 0.862745, 0.47451, 0 ), Color( 0.27451, 0.862745, 0.47451, 0.47451 ), Color( 0.27451, 0.862745, 0.47451, 0 ), Color( 0.27451, 0.862745, 0.47451, 0.47451 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Flashing2"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_Metal/ColorRect6:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.7, 1.2, 1.7, 2.2, 2.7, 3.2, 3.7, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.862745, 0.47451, 0.47451 ), Color( 0.27451, 0.862745, 0.47451, 0 ), Color( 0.27451, 0.862745, 0.47451, 0.47451 ), Color( 0.27451, 0.862745, 0.47451, 0 ), Color( 0.27451, 0.862745, 0.47451, 0.47451 ), Color( 0.27451, 0.862745, 0.47451, 0 ), Color( 0.27451, 0.862745, 0.47451, 0.47451 ), Color( 0.27451, 0.862745, 0.47451, 0 ), Color( 0.27451, 0.862745, 0.47451, 0.47451 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_Metal/ColorRect6:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="InfoPanel" type="Control" groups=["INFO_Panel"]]
margin_right = 220.0
margin_bottom = 340.0
rect_min_size = Vector2( 220, 340 )
mouse_filter = 2
size_flags_horizontal = 3
theme = SubResource( 3 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 220, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
custom_constants/margin_right = 10
custom_constants/margin_top = 8
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 8.0
margin_right = 210.0
margin_bottom = 330.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 2.0
margin_right = 200.0
margin_bottom = 61.0
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer" groups=["InfoPanelItem"]]
margin_left = 74.0
margin_right = 126.0
margin_bottom = 59.0
texture = ExtResource( 1 )

[node name="_Name" type="Label" parent="Panel/MarginContainer/VBoxContainer" groups=["InfoPanelItem"]]
margin_top = 65.0
margin_right = 200.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Default gun"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 200.0
margin_bottom = 88.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 200.0
margin_bottom = 249.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 200.0
margin_bottom = 157.0
custom_constants/vseparation = 4
columns = 2

[node name="Level" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_right = 116.0
margin_bottom = 14.0
text = "Level:"

[node name="Num_Level" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer" groups=["InfoPanelItem"]]
margin_left = 120.0
margin_right = 200.0
margin_bottom = 14.0
text = "-0"
align = 1

[node name="Container" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 18.0
margin_right = 116.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Container2" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 120.0
margin_top = 18.0
margin_right = 200.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Damage" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 23.0
margin_right = 116.0
margin_bottom = 37.0
rect_min_size = Vector2( 116, 0 )
size_flags_horizontal = 3
text = "Damage:"

[node name="Num_Damage" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer" groups=["InfoPanelItem"]]
margin_left = 120.0
margin_top = 23.0
margin_right = 200.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "-0"
align = 1

[node name="ColorRect" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_Damage"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 0.27451, 0.862745, 0.47451, 0.47451 )

[node name="Container3" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 41.0
margin_right = 116.0
margin_bottom = 42.0
custom_styles/panel = SubResource( 2 )

[node name="Container4" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 120.0
margin_top = 41.0
margin_right = 200.0
margin_bottom = 42.0
custom_styles/panel = SubResource( 2 )

[node name="TypeOfDamage" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 46.0
margin_right = 116.0
margin_bottom = 60.0
rect_min_size = Vector2( 116, 0 )
size_flags_horizontal = 3
text = "Type of Damage:"

[node name="Num_TypeOfDamage" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer" groups=["InfoPanelItem"]]
margin_left = 120.0
margin_top = 46.0
margin_right = 200.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "-0"
align = 1

[node name="Container5" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 64.0
margin_right = 116.0
margin_bottom = 65.0
custom_styles/panel = SubResource( 2 )

[node name="Container6" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 120.0
margin_top = 64.0
margin_right = 200.0
margin_bottom = 65.0
custom_styles/panel = SubResource( 2 )

[node name="DS" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 69.0
margin_right = 116.0
margin_bottom = 83.0
rect_min_size = Vector2( 116, 0 )
size_flags_horizontal = 3
text = "D/S:"

[node name="Num_DS" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer" groups=["InfoPanelItem"]]
margin_left = 120.0
margin_top = 69.0
margin_right = 200.0
margin_bottom = 83.0
size_flags_horizontal = 3
text = "-0"
align = 1

[node name="ColorRect3" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_DS"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 0.27451, 0.862745, 0.47451, 0.47451 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container7" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 87.0
margin_right = 116.0
margin_bottom = 88.0
custom_styles/panel = SubResource( 2 )

[node name="Container8" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 120.0
margin_top = 87.0
margin_right = 200.0
margin_bottom = 88.0
custom_styles/panel = SubResource( 2 )

[node name="Cooldown" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 92.0
margin_right = 116.0
margin_bottom = 106.0
text = "Cooldown:"

[node name="Num_Cooldown" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer" groups=["InfoPanelItem"]]
margin_left = 120.0
margin_top = 92.0
margin_right = 200.0
margin_bottom = 106.0
text = "-0"
align = 1

[node name="ColorRect4" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_Cooldown"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 0.27451, 0.862745, 0.47451, 0.47451 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container9" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 110.0
margin_right = 116.0
margin_bottom = 111.0
custom_styles/panel = SubResource( 2 )

[node name="Container10" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 120.0
margin_top = 110.0
margin_right = 200.0
margin_bottom = 111.0
custom_styles/panel = SubResource( 2 )

[node name="Gold" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 115.0
margin_right = 116.0
margin_bottom = 129.0
size_flags_horizontal = 3
text = "Gold lv up:"

[node name="Num_Gold" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer" groups=["InfoPanelItem"]]
margin_left = 120.0
margin_top = 115.0
margin_right = 200.0
margin_bottom = 129.0
size_flags_horizontal = 3
text = "-0"
align = 1

[node name="ColorRect5" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_Gold"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 0.27451, 0.862745, 0.47451, 0.47451 )

[node name="Container11" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 133.0
margin_right = 116.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 2 )

[node name="Container12" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 120.0
margin_top = 133.0
margin_right = 200.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 2 )

[node name="Metal" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 138.0
margin_right = 116.0
margin_bottom = 152.0
text = "Metal lv up:"

[node name="Num_Metal" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 120.0
margin_top = 138.0
margin_right = 200.0
margin_bottom = 152.0
text = "-0"
align = 1

[node name="ColorRect6" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer/Num_Metal"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 0.27451, 0.862745, 0.47451, 0.47451 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container13" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 156.0
margin_right = 116.0
margin_bottom = 157.0
custom_styles/panel = SubResource( 2 )

[node name="Container14" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 120.0
margin_top = 156.0
margin_right = 200.0
margin_bottom = 157.0
custom_styles/panel = SubResource( 2 )

[node name="Description" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 200.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
text = "rbrbwf"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 200.0
margin_bottom = 320.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Level up"

[node name="Button2" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Move"

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
text = "sell the gun"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flashing1 = SubResource( 7 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Flashing2 = SubResource( 9 )

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_Level_Up"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="_Move"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
